Sorting Cards Project

--- a/index.html
+++ b/index.html
@@ -9,26 +9,78 @@
 </head>
 
 <body>
-    <div class="card">
-        <div class="number spades">
-            A
-        </div>
+    
+    <section id="formulario">
+        <input type="number" name="nro" id="nro" min="1" max="13">
+        <button id="btnDraw">Draw</button>
+        <button id="btnSort">Sort</button>
+    </section>
+
+    <h4>Cartas Aleatorias</h4>
+    <section id="contenedor">
+
+    </section>
+
+    <h4>Ordenadas Paso a Paso:</h4>
+    <section id="ordenadas">
+        <!-- <section id="contenedor">
+            <div class="card spades">
+                A
+            </div>
+            <div class="card clubs">
+                A
+            </div>
+            <div class="card hearts">
+                A
+            </div>
+            <div class="card diams">
+                A
+            </div> 
+        </section>
+        <section id="contenedor">
+            <div class="card spades">
+                A
+            </div>
+            <div class="card clubs">
+                A
+            </div>
+            <div class="card hearts">
+                A
+            </div>
+            <div class="card diams">
+                A
+            </div> 
+        </section>
+        <section id="contenedor">
+            <div class="card spades">
+                A
+            </div>
+            <div class="card clubs">
+                A
+            </div>
+            <div class="card hearts">
+                A
+            </div>
+            <div class="card diams">
+                A
+            </div> 
+        </section> -->
+    </section>
+
+    <!-- 
+    <div class="card spades">
+        A
     </div>
-    <div class="card">
-        <div class="number clubs">
-            A
-        </div>
+    <div class="card clubs">
+        A
     </div>
-    <div class="card">
-        <div class="number hearts">
-            A
-        </div>
+    <div class="card hearts">
+        A
     </div>
-    <div class="card">
-        <div class="number diams">
-            A
-        </div>
-    </div>
+    <div class="card diams">
+        A
+    </div> 
+    -->
 
     <script src="./js/app.js"></script>
 </body>
